3.Semantic.Analysis/test/semanal/error/error4_1_3.mod
module undec;

begin

    a := 3

end undec.
